# EmulationStationAutoStart

./: CMakeLists.txt
es-app/: CMakeLists.txt
es-app/src/: FileData.cpp  FileData.h  main.cpp
es-app/src/views/gamelist/: BasicGameListView.cpp  ISimpleGameListView.h
es-core/src/: InputConfig.cpp
